--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   camera: ^0.10.5+2
-  image_picker: ^0.8.9
-  google_mlkit_commons: ^0.11.0
-  google_mlkit_object_detection: ^0.15.0
+  image: ^4.0.17
   path_provider: ^2.0.15
-  google_mlkit_face_detection: ^0.13.0
-  ffmpeg_kit_flutter_new: ^1.1.0
-  image: ^4.5.4
+  image_picker: ^1.0.0
+  exif: ^3.1.4
+  tflite_flutter: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
